@@ -1444,6 +1444,8 @@ EXTRA_DIST = \
   poke.pkl/field-init-diag-5.pk \
   poke.pkl/field-init-diag-6.pk \
   poke.pkl/field-init-diag-7.pk \
+  poke.pkl/field-init-diag-8.pk \
+  poke.pkl/field-init-diag-9.pk \
   poke.pkl/flush-1.pk \
   poke.pkl/flush-2.pk \
   poke.pkl/flush-3.pk \
